app/src/main/java/com/example/bookclub/errors/StudyLikeAlreadyExistedException.java
package com.example.bookclub.errors;

public class StudyLikeAlreadyExistedException extends RuntimeException {
	public StudyLikeAlreadyExistedException() {
		super("StudyLike already existed");
	}
}
